# StopPow

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README  README.md  cmake_install.cmake  compile_commands.json
examples/c++/: makefile
java_swig/: StopPow.i  makefile
lib/: makefile
python_swig/: setup.py
src/: AtomicData.cpp  AtomicData.h  Fit.cpp  Fit.h  PlotGen.cpp  PlotGen.h  Spectrum.cpp  Spectrum.h  StopPow.cpp  StopPow.h  StopPow_AZ.cpp  StopPow_AZ.h  StopPow_BPS.cpp  StopPow_BPS.h  StopPow_BetheBloch.cpp  StopPow_BetheBloch.h  StopPow_Constants.h  StopPow_Fit.cpp  StopPow_Fit.h  StopPow_Grabowski.cpp  StopPow_Grabowski.h  StopPow_LP.cpp  StopPow_LP.h  StopPow_Mehlhorn.cpp  StopPow_Mehlhorn.h  StopPow_PartialIoniz.cpp  StopPow_PartialIoniz.h  StopPow_Plasma.cpp  StopPow_Plasma.h  StopPow_SRIM.cpp  StopPow_SRIM.h  StopPow_Zimmerman.cpp  StopPow_Zimmerman.h  Util.h
test/: makefile  test0.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp
